--- a/requirements.txt
+++ b/requirements.txt
@@ -13,7 +13,7 @@ idna==3.10
 jiter==0.8.2
 openai==1.62.0
 pillow==11.1.0
-psycopg2==2.9.10
+psycopg2-binary==2.9.10
 pydantic==2.10.6
 pydantic_core==2.27.2
 sniffio==1.3.1
